@@ -55,6 +55,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|Map
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Set
 import|;
 end_import
@@ -94,6 +104,20 @@ operator|.
 name|configuration
 operator|.
 name|DataChannelDescriptor
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|gen
+operator|.
+name|CgenConfiguration
 import|;
 end_import
 
@@ -387,6 +411,83 @@ block|}
 block|}
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|selectedDataMaps
+operator|.
+name|isEmpty
+argument_list|()
+operator|&&
+name|type
+operator|==
+name|CgenConfiguration
+operator|.
+name|class
+condition|)
+block|{
+name|GeneratorsTab
+operator|.
+name|TopGeneratorPanel
+name|topGeneratorPanel
+init|=
+name|view
+operator|.
+name|getGenerationPanel
+argument_list|()
+decl_stmt|;
+name|topGeneratorPanel
+operator|.
+name|getSelectAll
+argument_list|()
+operator|.
+name|setSelected
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+name|topGeneratorPanel
+operator|.
+name|getGenerateAll
+argument_list|()
+operator|.
+name|setEnabled
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|Map
+operator|.
+name|Entry
+argument_list|<
+name|DataMap
+argument_list|,
+name|GeneratorsPanel
+argument_list|>
+name|entry
+range|:
+name|generatorsPanels
+operator|.
+name|entrySet
+argument_list|()
+control|)
+block|{
+name|entry
+operator|.
+name|getValue
+argument_list|()
+operator|.
+name|getCheckConfig
+argument_list|()
+operator|.
+name|setSelected
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 block|}
 specifier|private
 name|void
@@ -428,6 +529,33 @@ name|getDataMap
 argument_list|()
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|selectedDataMaps
+operator|.
+name|size
+argument_list|()
+operator|==
+name|generatorsPanels
+operator|.
+name|size
+argument_list|()
+condition|)
+block|{
+name|view
+operator|.
+name|getGenerationPanel
+argument_list|()
+operator|.
+name|getSelectAll
+argument_list|()
+operator|.
+name|setSelected
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 if|else if
 condition|(
@@ -449,6 +577,19 @@ name|panel
 operator|.
 name|getDataMap
 argument_list|()
+argument_list|)
+expr_stmt|;
+name|view
+operator|.
+name|getGenerationPanel
+argument_list|()
+operator|.
+name|getSelectAll
+argument_list|()
+operator|.
+name|setSelected
+argument_list|(
+literal|false
 argument_list|)
 expr_stmt|;
 block|}
@@ -484,21 +625,28 @@ operator|.
 name|getSelectAll
 argument_list|()
 operator|.
-name|addItemListener
+name|addActionListener
 argument_list|(
 name|e
 lambda|->
 block|{
+name|boolean
+name|isSelected
+init|=
+name|view
+operator|.
+name|getGenerationPanel
+argument_list|()
+operator|.
+name|getSelectAll
+argument_list|()
+operator|.
+name|isSelected
+argument_list|()
+decl_stmt|;
 if|if
 condition|(
-name|e
-operator|.
-name|getStateChange
-argument_list|()
-operator|==
-name|ItemEvent
-operator|.
-name|SELECTED
+name|isSelected
 condition|)
 block|{
 name|getGeneratorsPanels
@@ -539,17 +687,7 @@ block|}
 argument_list|)
 expr_stmt|;
 block|}
-if|else if
-condition|(
-name|e
-operator|.
-name|getStateChange
-argument_list|()
-operator|==
-name|ItemEvent
-operator|.
-name|DESELECTED
-condition|)
+else|else
 block|{
 name|getGeneratorsPanels
 argument_list|()
